--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+/* slick-carousel stil dosyaları */
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
