--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 /* slick-carousel stil dosyaları */
 
-
+@keyframes fadein {
+    from { opacity: 0; }
+    to { opacity: 1; }
+  }
+  
+  .animate-fadein {
+    animation: fadein 0.8s ease-in-out;
+  }
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
